<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Ícono sugerido: persona -->
    <item
        android:id="@+id/perfil"
        android:icon="@drawable/ic_person_pendiente"
        android:title="@string/menu_perfil" />
    <!-- Ícono sugerido: notas -->
    <item
        android:id="@+id/notas"
        android:icon="@drawable/ic_notas_pendiente"
        android:title="@string/menu_notas" />
    <!-- Ícono sugerido: agregar círculo -->
    <item
        android:id="@+id/crear_nota"
        android:icon="@drawable/ic_agregar_pendiente"
        android:title="@string/menu_crear_nota" />
    <!-- Ícono sugerido: chat -->
    <item
        android:id="@+id/chat"
        android:icon="@drawable/ic_chat_pendiente"
        android:title="@string/menu_chat" />
    <!-- Ícono sugerido: ubicación -->
    <item
        android:id="@+id/mapa"
        android:icon="@drawable/ic_mapa_pendiente"
        android:title="@string/menu_mapa" />
</menu>
